# github-big-proj8

./: .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml
src/codeguardian/: __init__.py  cli.py
src/codeguardian/core/: __init__.py  dependency_analyzer.py  models.py  reviewer.py  scanner.py  trust_engine.py  trust_scorer.py
tests/: test_core.py
